2010-05-11 Andrew John Hughes  <ahughes@redhat.com>

	* .hgignore: Remove jar files.

2010-01-13  Deepak Bhole <dbhole@redhat.com>

	* plugin/icedteanp/IcedTeaJavaRequestProcessor.cc:
	Add missing newline.
	* plugin/icedteanp/IcedTeaPluginRequestProcessor.cc
	(newMessageOnBus): Service GetSlot and SetSlot requests.
	(call): Create Java object from result only if it is non-null.
	(setMember): Pass a preset identifier to _setMember. Handle array slot
	setting.
	(sendMember): Handle array slot read.
	(queue_processor): Service GetSlot and SetSlot requests.
	(_setMember): Work with property NPIdentifier instead of name string.
	(_getMember): Same.
	* plugin/icedteanp/IcedTeaPluginUtils.cc
	(isObjectJSArray): Handle void constructor objects like 'window'.

2010-01-11 Andrew John Hughes  <ahughes@redhat.com>

	* patches/icedtea-libraries.patch:
	Decide which libjpeg library to load
	at compile-time not runtime using
	JPEG_LIB_VERSION.
	(See http://bugs.debian.org/563999)

2010-05-11 Andrew John Hughes  <ahughes@redhat.com>

	Fix issues with the CACAO build so it at
	least builds again (though it still fails to
	bootstrap).
	* patches/icedtea-plugin.patch,
	* patches/icedtea-webservices.patch:
	Remove unused patches.
	* Makefile.am: Add new patches.
	* patches/cacao/no-strict-aliasing.patch:
	Always append -fno-strict-aliasing, even if CFLAGS
	are specified.  Otherwise, a broken CACAO results.
	* patches/cacao/ignore-tests.patch:
	Regenerated against b89.
	* patches/cacao/6714758.patch:
	Add JVM_FindClassFromBootLoader introduced by
	6714758 and modified in 6864003.
	http://server.complang.tuwien.ac.at/cgi-bin/bugzilla/show_bug.cgi?id=137
	* patches/cacao/jsig.patch:
	Place fake libjsig.so in correct location for HotSpot 17+.
	* patches/sh4-support.patch:
	Regenerated against b89.

2010-01-11  Nobuhiro Iwamatsu <iwamatsu@nigauri.org>
	    Matthias Klose  <doko@ubuntu.com>

	* patches/icedtea-sh4-support.patch: Add zero support for Hitachi SH.